# xpirimintx

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
dl/: 01_intro.ipynb  02_basics.ipynb  03.1_loss.ipynb  03.2_grad-desc.ipynb  03.3_backprop.ipynb  03.4_torch.ipynb  04.1_relu.ipynb  04.2_softmax.ipynb  04.3_leaky-elu.ipynb  05.1_regularization.ipynb
nlp/: 01_text-repr.ipynb  02_tokenization.ipynb  03_tf-idf.ipynb  04.1[s]_skip-gram.ipynb  04.1_skip-gram-1.ipynb  04_embeddings.ipynb  requirements.txt  samples.py
nlp/01_text-representation/: main.ipynb
numpy/: 01_introduction.ipynb  02_arrays.ipynb  03_indexing.ipynb  04_broadcasting.ipynb  requirements.txt
numpy/01_introduction/: main.ipynb
numpy/01_simple/: main.ipynb
numpy/02_arrays/: main.ipynb
numpy/02_indexing/: main.ipynb
numpy/03_indexing/: main.ipynb
rl/: requirements.txt
rl/01-bandit/: practice.ipynb
scipy/: 01_introduction.ipynb
seaborn/: requirements.txt
seaborn/01-basic/: README.md  main.ipynb  practice.ipynb  theory.ipynb
sl/: 01_introduction.ipynb  02.1_scikit-learn.ipynb  02_training.ipynb  03_analytic-derivative.ipynb  03_gradient.ipynb  requirements.txt
surlning/01-04/: 01_regression.ipynb  02_k-means.ipynb  03_grid-world.ipynb  04_neural-net.ipynb  README.md
