[project]
name = "xpirimintx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy~=2.3.2",
    "scikit-learn~=1.7.1",
    "seaborn~=0.13.2",
    "torch~=2.8.0",
    "tqdm~=4.67.1",
]

[dependency-groups]
dev = [
    "black~=25.1.0",
    "isort~=6.0.1",
    "pipdeptree~=2.28.0",
]
