# Copyright 2025 Dao Le Bao Minh
# SPDX-License-Identifier: MIT

[project]
name = "xpirimintx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel~=6.30.1",
    "scikit-learn~=1.7.2",
    "seaborn~=0.13.2",
    "torch~=2.8.0",
    "tqdm~=4.67.1",
]

[dependency-groups]
dev = [
    "black[jupyter]~=25.9.0",
    "isort~=6.0.1",
    "pipdeptree~=2.28.0",
    "pre-commit~=4.3.0",
]

[tool.black]
target-version = ['py313']

[tool.pyright]
include = ["surlning"]
exclude = ["**/__pycache__"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.isort]
profile = "black"
src_paths = ["surlning"]
